--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ install:
   - npm install
 script:
   - mocha
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - COVERALLS_FLAG_NAME=test-1 make test-coveralls-1
